# canvas-api-download-material

./: .env.example  .gitignore  README.md  pyproject.toml
src/canvas_material_downloader/: canvas_api.py  cli.py  config.py  downloader.py  fs_utils.py
src/canvas_material_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_config.py  test_downloader.py  test_fs_utils.py
