[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-material-downloader"
version = "0.1.0"
description = "CLI foundation for downloading course material from Canvas."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "matty" }]
dependencies = ["tqdm>=4.66,<5"]

[project.scripts]
canvas-material = "canvas_material_downloader.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
